[project]
name = "PEER-pytorch"
version = "0.1.11"
description = "PEER - Pytorch"
authors = [
    { name = "Phil Wang", email = "lucidrains@gmail.com" }
]
readme = "README.md"
requires-python = ">= 3.8"
license = { file = "LICENSE" }
keywords = [
    'artificial intelligence',
    'deep learning',
    'product key',
    'mixture of experts',
  ]
classifiers=[
    'Development Status :: 4 - Beta',
    'Intended Audience :: Developers',
    'Topic :: Scientific/Engineering :: Artificial Intelligence',
    'License :: OSI Approved :: MIT License',
    'Programming Language :: Python :: 3.8',
  ]

dependencies = [
    'einops>=0.8.0',
    'einx>=0.3.0',
    'torch>=2.0',
]

[project.urls]
Homepage = "https://pypi.org/project/PEER-pytorch/"
Repository = "https://github.com/lucidrains/PEER-pytorch"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["PEER_pytorch"]
